--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -38,6 +38,9 @@ rhel6stig_root_email_address: foo@baz.com
 # Set to 'true' if X Windows is needed in your environment
 rhel6stig_xwindows_required: no
 
+# Do not configure iptables (if firewall managed via AWS security groups)
+rhel6stig_skip_iptables: no
+
 # Assume ipv6 is not needed on the target system and disable it.
 # This will also skip tasks related to configuring ip6tables.
 rhel6stig_ipv6_required: no
