--- a/tasks/cat2.yml
+++ b/tasks/cat2.yml
@@ -45,6 +45,7 @@
       line: ":INPUT DROP [0:0]"
       regexp: '^:INPUT\s*.*\s*\[0:0\]'
   when:
+      - not rhel6stig_skip_iptables
       - "ipv6_inbound_packets_audit.stdout != 'DROP'"
       - "'No such file or directory' not in ipv6_inbound_packets_audit.stderr"
   tags:
@@ -1556,7 +1557,7 @@
       name: ip6tables
       state: started
       enabled: yes
-  when: rhel6stig_ipv6_required
+  when: rhel6stig_ipv6_required and not rhel6stig_skip_iptables
   tags:
       - cat2
       - medium
@@ -1565,7 +1566,6 @@
       - V-38549
       - V-38553
       - patch
-  when: not rhel6stig_skip_iptables
 
 - name: |
 
